--- a/applications/garden/views/error.master
+++ b/applications/garden/views/error.master
@@ -88,11 +88,12 @@
                echo "</div>\n";
             }
          }
-
-         if (is_array($Arguments) && count($Arguments) > 0) {
+         
+         if (function_exists('CleanErrorArguments') && is_array($Arguments) && count($Arguments) > 0) {
             echo '<h3><strong>Variables in local scope:</strong></h3>
             <div class="PreContainer">';
             $Odd = FALSE;
+            CleanErrorArguments($Arguments);
             foreach ($Arguments as $Key => $Value) {
                // Don't echo the configuration array as it contains sensitive information
                if (!in_array($Key, array('Config', 'Configuration'))) {
