--- a/applications/garden/design/admin.css
+++ b/applications/garden/design/admin.css
@@ -396,7 +396,7 @@ div.DismissMessage p {
 	padding: 4px 0 0;
 }
 div.DismissMessage a.Dismiss {
-	font-family: 'lucida grande','Lucida Sans Unicode', arial;
+	font-family: arial;
    float: right;
 	font-size: 22px;
 	font-weight: bold;
@@ -410,7 +410,7 @@ div.DismissMessage a.Dismiss:hover {
 a.Close {
 	color: #777;
 	cursor: pointer;
-	font-family: 'lucida grande','Lucida Sans Unicode',arial;
+	font-family: arial;
 	font-size: 22px;
 	font-weight: bold;
 	padding: 0;
